# Voxsigil-Library

./: .gitignore  .npmignore  AGENTS.md  AGENTS_ENCAPSULATED_REGISTRATION_COMPLETE.md  AGENT_INTEGRATION_GUIDE.md  API_DRIVEN_LEARNING_INTEGRATION_COMPLETE.md  API_INTEGRATION_SUMMARY.md  BENCHMARK_QUICKSTART.md  BLT_RECOVERY_REPORT.md  BUG_REPORT.md  CHANGELOG.md  CLEANUP_STATUS.md  CLEANUP_SUMMARY.md  CLONE_AND_TEST_INSTRUCTIONS.md  COMPLETE_9_PHASE_BUG_FIXING_ROADMAP.md  COMPLETE_MODULE_REGISTRATION_PLAN.md  COMPLETE_MODULE_REGISTRATION_STATUS_REPORT.md  COMPLETE_SYSTEM_AUDIT.md  COMPLETE_SYSTEM_OVERVIEW.md  COMPLETE_TRAINING_PIPELINE_GUIDE.md  COMPRESSION_ALGORITHMS_DOCUMENTATION.md  CONTRIBUTING.md  CORE_HOLO15_COMPLETE_STATUS.md  CRITICAL_FILES_INVENTORY.md  DEEP_DUPLICATE_SCAN_REPORT.md  DEPENDENCY_AUDIT_PHASE_2.md  DUPLICATE_CLEANUP_CHECKLIST.md  DUPLICATE_COMPARISON_REPORT.md  DUPLICATE_SCAN_REPORT.md  ENCAPSULATED_REGISTRATION_COMPLETE.md  ENCAPSULATED_REGISTRATION_PATTERN.md  ENGINES_HOLO15_COMPLETION_REPORT.md  ENHANCED_GENOME_IMPLEMENTATION_COMPLETE.md  EVOLUTIONARY_CONSOLIDATION_REPORT.md  FILE_MOVEMENT_STRATEGY.md  FINAL_CLONE_READY_STATUS.md  FINAL_GUI_STATUS.md  FINAL_PROGRESS_REPORT.md  FINAL_TRAINING_STATUS_REPORT.py  GUI_COMPONENTS_SCAN_REPORT.md  (+178 more)
ARC/: arc_comparison.py  arc_data_processor.py  arc_dataset_generator.py  arc_grid_former_pipeline.py  arc_grid_former_runner.py  arc_gridformer_blt_adapter.py  arc_gridformer_core.py  arc_integration.py  arc_reasoner.py  arc_task_example.py  arc_task_visualizer.py  vanta_registration.py
ART/: ART_MODULE.md  VANTA_ART_STC_INTEGRATION.md  __init__.py  adapter.py  adapter_fix_summary.md  art_adapter.py  art_blt_bridge.py  art_controller.py  art_controller.py.backup_before_timeout_fix  art_entropy_bridge.py  art_hybrid_blt_bridge.py  art_logger.py  art_manager.py  art_rag_bridge.py  art_trainer.py  generative_art.py  path_helper.py  test_art_controller.py  test_art_trainer.py  train_art_with_local_llm.py  trainer_default_config.json  vanta_registration.py
BLT/: __init__.py  blt_encoder.py  blt_middleware_loader.py  blt_rag_compression.py  blt_supervisor_integration.py  blt_supervisor_integration_fix_summary.md  blt_system_adapters.py  hybrid_blt.py  hybrid_middleware.py  memory.py  vanta_registration.py
Gridformer/: __init__.py
Vanta/: __init__.py  async_training_engine.py  registration.py  vanta_integration.py  vanta_registration.py  vantacore_grid_connector.py
VoxSigilRag/: __init__.py  hybrid_blt.py  sigil_patch_encoder.py  vanta_registration.py  voxsigil_blt.py  voxsigil_blt_middleware.py  voxsigil_blt_rag.py  voxsigil_evaluator.py  voxsigil_middleware.py  voxsigil_middleware.py.old  voxsigil_processors.py  voxsigil_rag.py  voxsigil_rag_compression.py  voxsigil_semantic_cache.py
agents/: __init__.py  andy.py  astra.py  base.py  bridgeflesh.py  carla.py  codeweaver.py  dave.py  dreamer.py  echo.py  echolore.py  enhanced_vanta_registration.py  entropybard.py  evo.py  game_master_agent.py  gizmo.py  holo_mesh.py  holomesh.py  mirrorwarden.py  nebula.py  nix.py  oracle.py  orion.py  orionapprentice.py  phi.py  pulsesmith.py  rules_ref_agent.py  sam.py  sdkcontext.py  sleep_time_compute_agent.py  sleeptimecompute.py  sleeptimecomputeagent.py  socraticengine.py  vanta_registration.py  voice_table_agent.py  voxagent.py  voxka.py  warden.py  wendy.py
api/: dual_chain_api_server.py
arc_data/: training.json
archive/: README.md  production_config.py.bak  test_integration_fixed.py  tinyllama_multi_gpu_finetune_fixed.py  vanta_integration_backup.py  vanta_integration_fixed.py  vmb_production_final.py
attribution/: phase_d_attribution_report_20260212_085647.json
batch_files/: Launch_Direct_GUI.bat  Launch_VoxSigil_GUI.bat  Run_Cleanup.bat  Test_GUI_Stability.bat
benchmarks/: __init__.py  beir_voxsigil_comparison.py  bench_ablations.py  bench_adversarial.py  bench_latency.py  bench_phase_4a_profiles.py  bench_quality_synthqa.py  check_gates.py  model_benchmark_20260212_090834.json  runner.py
blockchain/: dual_chain_blockchain.py
config/: __init__.py  default.yaml  music_preferences.json  production_config.py  vanta_registration.py
core/: AdvancedMetaLearner.py  __init__.py  advanced_human_tts_techniques.py  advanced_neural_tts.py  agent_voice_system.py  arc_comparison.py  arc_format_validation.py  arc_grid_former_pipeline.py  arc_grid_former_runner.py  arc_gridformer_blt.py  arc_gridformer_blt.py.new  arc_integration.py  arc_reasoner.py  arc_task_example.py  base.py  checkin_manager_vosk.py  communication_orchestrator.py  debug_fix_phase_2.patch  dev_config_manager.py  dialogue_manager.py  download_arc_data.py  echo_state_network.py  end_to_end_arc_validation.py  enhanced_agent_voice_integration.py  enhanced_grid_connector.py  enhanced_gridformer_manager.py  evo_nas.py  evolutionary_optimizer.py  grid_distillation.py  grid_former.py  grid_former_evaluator.py  human_like_tts_enhancement.py  hyperparameter_search.py  hyperparameter_search_enhanced.py  iterative_gridformer.py  iterative_reasoning_gridformer.py  learning_manager.py  meta_cognitive.py  model_architecture.py  model_architecture_fixer.py  (+16 more)
datasets/: adversarial_pruning.jsonl  synth_facts_10k.jsonl  synth_qa_pairs.jsonl
demos/: README.md  absolute_minimal_gui_test.py  agent_speech_samples.py  demo_advanced_tts_simple.py  demo_advanced_tts_techniques.py  demo_enhanced_tabs_functionality.py  demo_free_neural_tts.py  demo_neural_tts_capabilities.py  demo_production_neural_tts.py  demo_tts_stt.py  minimal_gui_test.py  minimal_gui_test_debug.py  minimal_no_hang_test.py  play_agent_voices.py  quick_agent_voice_test.py  quick_gui_fix.py  quick_music_test.py  quick_neural_tts_test.py  quick_system_check.py  quick_test.py  quick_test_enhanced_gui.py  quick_test_event_loop.py  quick_training_test.py  quick_tts_stt_test.py  show_agent_voices.py  simple_gui_demo.py  simple_gui_test.py  simple_hang_diagnostic.py  simple_import_test.py  simple_music_test.py  ultra_minimal_gui.py
diagnostic_tools/: Debug_Hang.bat  README.md  analyze_gui_crashes.py  (+9 more)
(+1096 files in other folders)
