[project]
name = "my_new_project"
version = "0.1.0"
description = "Python project configured by setup script"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.9.0",
    "numpy>=2.2.6",
    "pandas>=1.3.0",
    "pathlib>=1.0.1",
    "pyqt5>=5.15.0",
    "pyqt5-qt5>=5.15.2",
    "pyqt5-sip>=12.9.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=0.24.2",
    "scipy>=1.7.0",
    "sentence-transformers>=2.2.0",
    "sounddevice>=0.4.4",
    "soundfile>=0.10.3",
    "faiss-cpu>=1.7.2",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
]

[dependency-groups]
dev = [
    "black>=22.3.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]
jupyter = [
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]
monitoring = [
    "tensorboard>=2.8.0",
    "wandb>=0.12.0",
]
# Dependencies will be populated by 'uv add'

